--- a/index.html
+++ b/index.html
@@ -40,27 +40,28 @@
     <div class="container">
       <div class="row">
         <div class="col-md-5">
-          <img src="img/750x450.png" class="adaptar img-fluid">
+          <img src="img/genesis.jpg" class="adaptar img-fluid">
         </div>
         <div class="col-md-7">
           <h2>UNIVERSIDAD DE EL SALVADOR</h2>
           <br>
-          <p>asdddddSADDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDdddddd</p>
+          <p>Como integrantes del grupo de la catedra de Tecnología Aplicada al Diseño Gráfico queremos demostrar avances y conocimientos adquiridos en la practica mediante procesos de desarrollo de paginas web llevandolo a la practica en la creacion de un Home y perfiles individuales de cada uno como colectivo de diseñadores graficos.</p>
           <br>
-          <p>sdaaaaaaaaaaaaaaaaaaaaaDFFFFFFFFFFFFFF HHDFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</p>
+
+          <p>Ademas detallar caracteristicas de cada diseñador que nos hacen diferentes y destacar entre nosotros, mediante la creacion de perfiles que muestren trabajos y una breve descripcion de cada uno de nosotros y disfruten de nuestro trabajo como grupo.</p>
         </div>
       </div>
       <br>
       <div class= "row mb-4">
           <div class="col-md-4">
             <div class="card text-center">
-             <img src="img/750x450.png" class="adaptar img-fluid">
+             <img src="img/alonso.jpg" class="adaptar img-fluid">
              <div class="card-body">
-               <h4>TEAM MEMBER</h4>
+               <h4>Alonso Coca</h4>
                <br>
-               <p class="text-member">Posicion Membet</p>
+               <p class="text-member">Posicion Member</p>
                <br>
-               <p>Description menber</p>
+               <p>Graphic Designer</p>
                <br>
                <a href="#">Conoce mas</a>
              </div>
@@ -69,13 +70,13 @@
 
           <div class="col-md-4">
             <div class="card text-center">
-             <img src="img/750x450.png" class="adaptar img-fluid">
+             <img src="img/michelle.jpeg" class="adaptar img-fluid">
              <div class="card-body">
-               <h4>TEAM MEMBER</h4>
+               <h4>Michelle Panameño</h4>
                <br>
                <p class="text-member">Posicion Membet</p>
                <br>
-               <p>Description menber</p>
+               <p>Graphic Designer</p>
                <br>
                <a href="#">Conoce mas</a>
              </div>
@@ -84,13 +85,13 @@
 
           <div class="col-md-4">
             <div class="card text-center">
-             <img src="img/750x450.png" class="adaptar img-fluid">
+             <img src="img/yazmin.jpeg" class="adaptar img-fluid">
              <div class="card-body">
-               <h4>TEAM MEMBER</h4>
+               <h4>Yasmin Valencia</h4>
                <br>
                <p class="text-member">Posicion Membet</p>
                <br>
-               <p>Description menber</p>
+               <p>Graphic Designer</p>
                <br>
                <a href="views/perfil1.html">Conoce mas</a>
              </div>
