--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="Alonso_Coca" content="">
-  <title>Pagina Grupal</title>
+  <title>Pagina Grupal Alonso</title>
   <!-- Bootstrap core CSS-->
   <link href="css/bootstrap/bootstrap.css" rel="stylesheet">
   <link href="css/menu-sidebar.css" rel="stylesheet">
