--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       id="sidebar-wrapper">
         <ul class="nav sidebar-nav">
             <li class="sidebar-brand"><a href="#">INICIO</a></li>
-            <li><a href="views/Alonso_Coca.html">Alonso Coca</a></li>
+            <li><a href="views/perfil1.html">Alonso Coca</a></li>
             <li><a href="#">Michel Panameño</a></li>
             <li><a href="#">Yasmin Valencia</a></li>
         </ul>
