--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
              <div class="card-body">
                <h4>Alonso Coca</h4>
                <br>
-               <p class="text-member">Posicion Member</p>
+               <p class="text-member">Master</p>
                <br>
                <p>Graphic Designer</p>
                <br>
@@ -74,7 +74,7 @@
              <div class="card-body">
                <h4>Michelle Panameño</h4>
                <br>
-               <p class="text-member">Posicion Membet</p>
+               <p class="text-member">Collaborators</p>
                <br>
                <p>Graphic Designer</p>
                <br>
@@ -89,7 +89,7 @@
              <div class="card-body">
                <h4>Yasmin Valencia</h4>
                <br>
-               <p class="text-member">Posicion Membet</p>
+               <p class="text-member">Collaborators</p>
                <br>
                <p>Graphic Designer</p>
                <br>
