--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img src="img/genesis.jpg" class="adaptar img-fluid">
         </div>
         <div class="col-md-7">
-          <h2>UNIVERSIDAD DE EL SALVADOR</h2>
+          <h1>Group of Designers</h1>
           <br>
           <p>Como integrantes del grupo de la catedra de Tecnología Aplicada al Diseño Gráfico queremos demostrar avances y conocimientos adquiridos en la practica mediante procesos de desarrollo de paginas web llevandolo a la practica en la creacion de un Home y perfiles individuales de cada uno como colectivo de diseñadores graficos.</p>
           <br>
@@ -55,7 +55,7 @@
       <div class= "row mb-4">
           <div class="col-md-4">
             <div class="card text-center">
-             <img src="img/alonso.jpg" class="adaptar img-fluid">
+             <img src="img/coca.jpg" class="adaptar img-fluid">
              <div class="card-body">
                <h4>Alonso Coca</h4>
                <br>
