--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
           <img src="img/genesis.jpg" class="adaptar img-fluid">
         </div>
         <div class="col-md-7">
-          <h1>Group of Designers</h1>
+          <h1 class="text-center">Group of Designers</h1>
           <br>
-          <p>Como integrantes del grupo de la catedra de Tecnología Aplicada al Diseño Gráfico queremos demostrar avances y conocimientos adquiridos en la practica mediante procesos de desarrollo de paginas web llevandolo a la practica en la creacion de un Home y perfiles individuales de cada uno como colectivo de diseñadores graficos.</p>
+          <p class="text-center">Como integrantes del grupo de la catedra de Tecnología Aplicada al Diseño Gráfico queremos demostrar avances y conocimientos adquiridos en la practica mediante procesos de desarrollo de paginas web llevandolo a la practica en la creacion de un Home y perfiles individuales de cada uno como colectivo de diseñadores graficos.</p>
           <br>
 
-          <p>Ademas detallar caracteristicas de cada diseñador que nos hacen diferentes y destacar entre nosotros, mediante la creacion de perfiles que muestren trabajos y una breve descripcion de cada uno de nosotros y disfruten de nuestro trabajo como grupo.</p>
+          <p class="text-center">Ademas detallar caracteristicas de cada diseñador que nos hacen diferentes y destacar entre nosotros, mediante la creacion de perfiles que muestren trabajos y una breve descripcion de cada uno de nosotros y disfruten de nuestro trabajo como grupo.</p>
         </div>
       </div>
       <br>
@@ -61,7 +61,7 @@
                <br>
                <p class="text-member">Master</p>
                <br>
-               <p>Graphic Designer</p>
+               <p class="texto">Graphic Designer</p>
                <br>
                <a href="#">Conoce mas</a>
              </div>
@@ -70,13 +70,13 @@
 
           <div class="col-md-4">
             <div class="card text-center">
-             <img src="img/michelle.jpeg" class="adaptar img-fluid">
+             <img src="img/michel.jpg" class="adaptar img-fluid">
              <div class="card-body">
                <h4>Michelle Panameño</h4>
                <br>
                <p class="text-member">Collaborators</p>
                <br>
-               <p>Graphic Designer</p>
+               <p class="texto">Graphic Designer</p>
                <br>
                <a href="#">Conoce mas</a>
              </div>
@@ -85,13 +85,13 @@
 
           <div class="col-md-4">
             <div class="card text-center">
-             <img src="img/yazmin.jpeg" class="adaptar img-fluid">
+             <img src="img/yaz.jpg" class="adaptar img-fluid">
              <div class="card-body">
                <h4>Yasmin Valencia</h4>
                <br>
                <p class="text-member">Collaborators</p>
                <br>
-               <p>Graphic Designer</p>
+               <p class="texto">Graphic Designer</p>
                <br>
                <a href="views/perfil1.html">Conoce mas</a>
              </div>
