CAMBIOS DE HOME

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 <footer class="py-5 bg-dark">
   <div>
-    <p class="text-center text-white">copyright &copy; your website 2017</p>
+    <p class="text-center text-white">UES &copy;GROUP OF DESIGNERS</p>
   </div>
 </footer>
 
