cambios de pagina home

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-5">
-          <img src="img/genesis.jpg" class="adaptar img-fluid">
+          <img src="img/welcome.jpg" class="adaptar img-fluid">
         </div>
         <div class="col-md-7">
-          <h1 class="text-center">Group of Designers</h1>
+          <h1 class="titulo text-center">Group of Designers</h1>
           <br>
           <p class="text-center">Como integrantes del grupo de la catedra de Tecnología Aplicada al Diseño Gráfico queremos demostrar avances y conocimientos adquiridos en la practica mediante procesos de desarrollo de paginas web llevandolo a la practica en la creacion de un Home y perfiles individuales de cada uno como colectivo de diseñadores graficos.</p>
           <br>
