--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <!-- hasta aqui termina nuestro menu responsivo-->
 
     <div class="container">
+      <div class="col-md-12">
+          <img src="img/milife.jpg" class="adaptar img-fluid">
       <div class="row">
         <div class="col-md-5">
           <img src="img/welcome.jpg" class="adaptar img-fluid">
