cambios de perfil alonso

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div>
     <p class="text-center text-white">UES &copy;GROUP OF DESIGNERS</p>
   </div>
-</footer>
+</footer class="negro">
 
 
     </div>
