cambios finales alonso

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                <br>
                <p class="texto">Graphic Designer</p>
                <br>
-               <a href="#">Conoce mas</a>
+               <a href="views/perfil1.html">Conoce mas</a>
              </div>
            </div>
           </div>
